# bevy-obelisk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/skills/: bigzap.cast.ron  blizzard.cast.ron  chain_bolt.cast.ron  chancebolt.cast.ron  cleave.cast.ron  critzap.cast.ron  discharge_strike.cast.ron  dud_bolt.cast.ron  fireball.cast.ron  fireball_explosion.cast.ron  firebolt.cast.ron  firebolt_cd.cast.ron  firezap.cast.ron  pummel.cast.ron  quickjab.cast.ron  reach_strike.cast.ron  recursor.cast.ron  steadyzap.cast.ron
docs/superpowers/: 2026-07-01-skill-designer-handoff.md
docs/superpowers/plans/: 2026-06-05-obelisk-bevy-vertical-slice.md  2026-06-05-spatial-targeting-completeness.md  2026-06-10-consumer-api-facades.md  2026-06-15-server-authoritative-netcode.md  2026-06-15-vfx-cues-content.md  2026-06-16-validation-environment.md  2026-06-25-obelisk-arena-m0-m1.md  2026-06-25-obelisk-arena-m2.md  2026-06-25-obelisk-bevy-0.18-avian-0.5-migration.md  2026-06-28-obelisk-arena-playtest-fixes.md  2026-06-29-arena-lightyear-native-prediction.md  2026-06-30-skill-designer-m1-m3-plan.md  2026-07-01-skill-designer-m4-plan.md  2026-07-02-obelisk-bevy-trigger-reform.md  2026-07-02-portable-dev-env-plan.md  2026-07-03-skill-mode-bevy-modal-editor.md  2026-07-03-trigger-reform-followups.md  2026-07-04-phase4-arena-migration-STUB.md  2026-07-05-phase4-arena-migration.md  2026-07-09-surfaces-obelisk-core-plan.md
docs/superpowers/research/: 2026-06-30-editor-integration-understanding.md  2026-07-01-m4-rules-authoring-understanding.md
docs/superpowers/specs/: 2026-06-04-obelisk-bevy-plugin-design.md  2026-06-16-validation-environment-design.md  2026-06-20-skill-trigger-secondary-cast.md  2026-06-20-test-coverage-expansion.md  2026-06-24-game-template-context.md  2026-06-24-obelisk-arena-design.md  2026-06-24-obelisk-feature-coverage-audit.md  2026-06-25-m0m1-integration-surface.md  2026-07-02-skill-anatomy.md  (+10 more)
examples/: _screenshot_spike.rs  headless_server.rs  playground.rs  screenshot.rs
src/: events.rs  ids.rs  lib.rs  loot.rs  net.rs  prelude.rs  testkit.rs  verbs.rs  vfx.rs
src/assets/: mod.rs
src/combat/: mod.rs  resolve.rs  system.rs
src/core/: components.rs  config.rs  cooldown.rs  mod.rs  spawn_rng.rs  tick.rs
src/facade/: combat.rs  mod.rs  read.rs  spatial.rs
src/present/: debug_viz.rs  mod.rs
src/scenario/: library.rs  mod.rs  run.rs  trace.rs
src/spatial/: boxes.rs  cone.rs  detect.rs  filter.rs  mod.rs  projectile.rs  shapes.rs
src/surfaces/: mod.rs  patch.rs  systems.rs  types.rs
src/timeline/: advance.rs  cast.rs  mod.rs  state.rs  triggered.rs
tests/: acquisition.rs  beam_retarget.rs  determinism.rs  emitters.rs  end_events.rs  facades.rs  golden.rs  netcode.rs  spatial_targeting.rs  surfaces.rs  triggered_exec.rs  vertical_slice.rs  vfx_content.rs
tests/golden/: acquisition_fallback.trace  already_casting.trace  apply_effect.trace  blizzard_emitter.trace  cast_rejected_insufficient_mana.trace  cast_rejected_no_target.trace  cast_rejected_unknown_skill.trace  cast_speed_scaling.trace  chain_from_rules.trace  charged_vs_uncharged.trace  cone_cleave.trace  cooldown_gate.trace  crit_strike.trace  damage_reduction_mitigates.trace  effect_refresh_stacking.trace  effect_unlimited_stacking.trace  everytick_hitbox.trace  faction_filter.trace  firebolt_kill.trace  instant_cast.trace  interrupt_cast.trace  line_of_sight.trace  loot_multi_drop.trace  loot_nested_table.trace  loot_on_death.trace  loot_quantity_scaling.trace  loot_rarity_scaling.trace  netcode_egress.trace  on_apply_triggers_skill.trace  on_big_hit_trigger.trace  on_expire_triggers_skill.trace  on_fire_damage_dealt_trigger.trace  on_max_stacks_triggers_and_consumes.trace  on_non_crit_trigger.trace  oneshot_protection_caps.trace  out_of_range.trace  physical_damage_reduction_mitigates.trace  probabilistic_effect_apply.trace  resistance_mitigates.trace  self_buff_boosts_damage.trace  (+8 more)
(+52 files in other folders)
