[package]
name = "obelisk-bevy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["present"]
present = []
test-support = []
# Render-dependent Avian collider gizmos in the present layer. Opt-in; needs a render backend.
debug-gizmos = ["present"]

[dependencies]
bevy = "0.18"
avian3d = "0.5"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "1"
rand = "0.8"
rand_chacha = "0.3"
stat_core = { git = "ssh://git@github.com/vothuul/obelisk.git", branch = "master" }
loot_core = { git = "ssh://git@github.com/vothuul/obelisk.git", branch = "master" }
skill_tree = { git = "ssh://git@github.com/vothuul/obelisk.git", branch = "master" }
tables_core = { git = "ssh://git@github.com/vothuul/obelisk.git", branch = "master" }

[dev-dependencies]
# enable the in-crate test helpers when running tests
obelisk-bevy = { path = ".", features = ["test-support"] }
serde_json = "1"
# headless render-to-PNG examples (screenshot spike + renderer): the main<->render world
# readback channel needs a Sync Receiver; std::sync::mpsc::Receiver is !Sync, so use
# crossbeam-channel exactly like Bevy's headless_renderer example (already a transitive dep).
crossbeam-channel = "0.5"
